2003-10-20  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 04002] Re: function and w3m-control
	* url.c (getURLScheme): accept numeric in scheme

2003-10-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03996] HELP_DIR and funcname.tab
	  reported by SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
	* configure.in: don't use posix shell syntax $(..)
	* funcname.tab: deleted

2003-10-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/Makefile.in (w3mhelp-funcname.pl): depends ../funcname.tab
	* Makefile.in (IMGOBJS): deleted
		(indep.o): depends on fm.h funcname1.h
		(IMGDISPLAY): depends on w3mimg/w3mimg.a
		(w3mimg/w3mimg.a): renamed from w3mimg
	* acinclude.m4 (AC_W3M_IMAGE): modify IMBOBJS 
	* w3mimg/Makefile.in (AR): added
			(RANLIB): added
			(IMGOBJS): added
			(w3mimg.a): added

2003-10-11  qhwt@myrealbox.com

	* [w3m-dev 03990] Re: post-m17n merge problem?
	* Makefile.in (MAN1): need $(top_srcdir)
			(MAN1_JA): ditto
			(LOBJS): depends on fm.h funcname1.h
			(INFLATE): depends on $(ALIB)
			(libwc/libwc.a): renamed from libwc
			(IMGDISPLAY): depends on $(IMGOBJS) instead of w3mimg
				  depends on $(ALIB)
			(w3mimgdisplay.o): depends on w3mimg/w3mimg.h
	* acinclude.m4 (AC_W3M_M17N): WCTARGET is libwc/libwc.a
	* configure.in (HELP_DIR): expand ${prefix}

2003-10-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03985] Re: support for 307 Temporary Redirect
	* file.c (loadGeneralFile): support 307 Temporary Redirect

2003-10-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix build error --disbable-m17n
	* config.h.in: undef USE_M17N, USE_UNICODE
	* etc.c (url_unquote_conv): USE_M17N
	* file.c (convertLine): USE_M17N
		(loadHTMLStream): fix ifdef USE_IMAGE->USE_M17N
		(loadBuffer): fix USE_M17N
		(getNextPage): fix USE_M17N
	* fm.h (USE_M17N): don't define USE_M17N in case LANG == JA
			(this should be done by configure)
		(wc_ces): dummy typedef
		(wc_Str_conv): fix non-m17n macro args
		(wc_Str_conv_strict): ditto